--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "node test.js"
+    "start": "nodemon index.js", 
+    "test": "node test.js",
+    "prove01": "nodemon prove01.js"
   },
   "dependencies": {
     "ejs": "^2.5.6",
